--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -42,6 +42,8 @@ jobs:
       env:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        GIST_ACCESS_TOKEN: ${{ secrets.GIST_ACCESS_TOKEN }}
+        GIST_ID: ${{ secrets.GIST_ID }}
       run: |
         python monitor_single.py
 
