--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -77,8 +77,8 @@ jobs:
       env:
         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        GIST_ACCESS_TOKEN: ${{ secrets.GIST_ACCESS_TOKEN_NAVER }}
-        GIST_ID: ${{ secrets.GIST_ID_NAVER }}
+        GIST_ACCESS_TOKEN: ${{ secrets.GIST_ACCESS_TOKEN }}
+        GIST_ID: ${{ secrets.GIST_ID }}
       run: |
         python naver_sports_monitor.py
     
