--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,22 +1,21 @@
 name: 연합뉴스 스포츠 모니터링
-
 on:
   schedule:
     # 평일 모니터링 (월-금, 1-5) - 하루 8번
-    - cron: '0 15 * * 1-5'    # 00:00 KST (월-금)
-    - cron: '0 0 * * 1-5'     # 09:00 KST (월-금)
-    - cron: '0 4 * * 1-5'     # 13:00 KST (월-금)
-    - cron: '0 6 * * 1-5'     # 15:00 KST (월-금)
-    - cron: '0 8 * * 1-5'     # 17:00 KST (월-금)
-    - cron: '0 10 * * 1-5'    # 19:00 KST (월-금)
-    - cron: '0 11 * * 1-5'    # 20:00 KST (월-금)
-    - cron: '30 13 * * 1-5'   # 22:30 KST (월-금)
+    - cron: '0 15 * * 0'     # 00:00 KST (월요일, 일요일 UTC 15:00)
+    - cron: '0 0 * * 1-5'    # 09:00 KST (월-금, UTC 00:00)
+    - cron: '0 4 * * 1-5'    # 13:00 KST (월-금, UTC 04:00)
+    - cron: '0 6 * * 1-5'    # 15:00 KST (월-금, UTC 06:00)
+    - cron: '0 8 * * 1-5'    # 17:00 KST (월-금, UTC 08:00)
+    - cron: '0 10 * * 1-5'   # 19:00 KST (월-금, UTC 10:00)
+    - cron: '0 11 * * 1-5'   # 20:00 KST (월-금, UTC 11:00)
+    - cron: '30 13 * * 1-5'  # 22:30 KST (월-금, UTC 13:30)
     
     # 일요일 모니터링 (0) - 하루 4번
-    - cron: '0 2 * * 0'       # 11:00 KST (일요일)
-    - cron: '0 6 * * 0'       # 15:00 KST (일요일)
-    - cron: '0 10 * * 0'      # 19:00 KST (일요일)
-    - cron: '0 11 * * 0'      # 20:00 KST (일요일)
+    - cron: '0 2 * * 0'      # 11:00 KST (일요일, UTC 02:00)
+    - cron: '0 6 * * 0'      # 15:00 KST (일요일, UTC 06:00)
+    - cron: '0 10 * * 0'     # 19:00 KST (일요일, UTC 10:00)
+    - cron: '0 11 * * 0'     # 20:00 KST (일요일, UTC 11:00)
   
   # 수동 실행도 가능하게
   workflow_dispatch:
@@ -46,7 +45,7 @@ jobs:
         GIST_ID: ${{ secrets.GIST_ID }}
       run: |
         python monitor_single.py
-
+        
     - name: 실행 결과 저장 (선택사항)
       uses: actions/upload-artifact@v4
       if: always()
